--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
-    <div id="IPaddress" class="animate__animated animate__fadeIn"></div>
+    <div id="IPaddress" class="animate__animated animate__fadeIn" onclick="copy()"></div>
     <script src="script.js"></script>
 </body>
 </html>
